--- a/bazi-calculator-app.html
+++ b/bazi-calculator-app.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>BA ZI BIRTH CHART - Math From First Principles</title>
+        <title>BAZI 八字 Math From First Principles</title>
         <style>
             * {
                 margin: 0;
@@ -447,11 +447,10 @@
 
         <div class="container">
             <header>
-                <h1>BaZi</h1>
-                <small class="validation-badge"
-                    >✓ Mathematics meets ancient metaphors
-                </small>
-                <small class="subtitle">PILLAR OF DESTINY</small>
+                <h1>Ba Zi 八字</h1>
+                <p class="validation-badge">
+                    ✓ Mathematics meets ancient metaphors
+                </p>
             </header>
 
             <div class="input-section">
